Fix assertion method in InvoiceRepositoryTest